[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UIManager/BuyScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UIManager/CardInfoPopup.tscn" type="PackedScene" id=2]

[node name="BuyScreen" type="ConfirmationDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -367.0
margin_top = -206.0
margin_right = 367.0
margin_bottom = 206.0
rect_min_size = Vector2( 190, 66.5 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Buy Screen"
dialog_text = "Continue to purchase?

Items in cart:"
dialog_hide_on_ok = false
script = ExtResource( 1 )

[node name="VB" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 56.0
margin_right = -8.0
margin_bottom = -31.0

[node name="SC" type="ScrollContainer" parent="VB"]
margin_right = 718.0
margin_bottom = 302.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VB" type="VBoxContainer" parent="VB/SC"]
margin_right = 718.0
size_flags_horizontal = 3

[node name="TotalCost" type="Label" parent="VB"]
margin_top = 306.0
margin_right = 718.0
margin_bottom = 320.0
text = "Total cost"

[node name="CardInfoPopup" parent="." instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 56.0
margin_right = -8.0
margin_bottom = -31.0
